--- a/css/style.css
+++ b/css/style.css
@@ -82,16 +82,18 @@ header {
     box-shadow: 0 0px 20px 0px grey;
 }
 
-#abouth2{
+#abouth2 {
     width: 100%;
     text-align: center;
     display: inline-block;
 }
-.abouttext{
+
+.abouttext {
     display: inline-block;
     width: 48%;
-    
+
 }
+
 #jn {
     width: 48%;
     height: 300px;
@@ -102,7 +104,7 @@ header {
 #jn img {
     width: 50%;
     margin: 0 40px 0 40px;
-   padding-left: 50px;
+    padding-left: 50px;
 }
 
 #skill {
@@ -132,21 +134,24 @@ header {
     height: 350px;
     margin: 0;
 }
-#port1{
+
+#port1 {
     background-image: url(../img/portfolio1.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
 }
-#port2{
+
+#port2 {
     background-image: url(../img/portfolio2.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
 }
-#port3{
+
+#port3 {
     background-image: url(../img/portfolio4.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -162,11 +167,15 @@ header {
     left: 50%;
     transform: translateX(-50%);
     color: #fff;
-    background-color: rgba(200, 200, 200, 0.8);
+    background-color: rgba(33, 59, 80, 0.8);
     margin: 0;
+    opacity: 0;
 
 }
-.portfoliotext p{
+.portfoliotext:hover {
+    opacity: 1;
+}
+.portfoliotext p {
     position: absolute;
     height: 90%;
     width: 90%;
@@ -174,18 +183,60 @@ header {
     left: 50%;
     transform: translateX(-50%);
 }
-#form{
+
+.form a {
+    text-decoration: none;
+    color: #1ac056;
+
+}
+
+#formh2 {
+    margin: 0;
+    padding: 20px 0 20px 20px;
+}
+
+#form {
     background-color: #213b50;
     color: #fff;
     height: 500px;
 }
-.form{
+
+.form {
+    position: relative;
     margin-top: 20px;
     display: inline-block;
     width: 48%;
+    padding-left: 20px;
 }
-.form a{
-    text-decoration: none;
-        color: #1ac056;
 
+.form input[type=text],
+.form input[type=email],
+form textarea {
+    background-color: #2b4a64;
+    border: 1px solid transparent;
+    width: 500px;
+    margin: 10px 0 10px 0;
+    padding-left: 10px;
+    padding-top: 10px;
+}
+
+.form input[type=text],
+.form input[type=email] {
+    height: 40px;
+}
+
+.form textarea {
+    height: 100px;
+
+}
+
+.form input[type=submit] {
+    padding: 0;
+    position: relative;
+    background-color: #1ac056;
+    border: 1px solid transparent;
+    height: 30px;
+    width: 60px;
+    left: 450px;
+    
 }
