--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@ body {
     font-family: "Lato";
     color: #291f1a;
 }
+section{
+    width: 100%;
+    padding: 20px 30px 30px 20px;
+    box-sizing: border-box;
+}
 
 #menu {
     height: 60px;
@@ -77,34 +82,43 @@ header {
 
 #about {
     position: relative;
-    height: 450px;
+    height: 700px;
     margin: 0;
     box-shadow: 0 0px 20px 0px grey;
 }
 
 #abouth2 {
+    display: inline-block;
     width: 100%;
     text-align: center;
-    display: inline-block;
 }
 
 .abouttext {
     display: inline-block;
-    width: 48%;
+    text-align: left;
+    width: 49%;
+    margin: 0;
+    vertical-align: top;
 
 }
 
 #jn {
-    width: 48%;
-    height: 300px;
-    float: left;
-    margin: 10px;
+    display: inline-block;
+    width: 49%;
+    text-align: center;
+    margin: 0;
+/*    float: left;*/
+    
 }
 
 #jn img {
     width: 50%;
+/*
     margin: 0 40px 0 40px;
     padding-left: 50px;
+*/
+    border: 15px solid #fff;
+    border-radius: 2px;
 }
 
 #skill {
@@ -203,6 +217,7 @@ header {
 
 .form {
     position: relative;
+    top: 0;
     margin-top: 20px;
     display: inline-block;
     width: 48%;
@@ -239,4 +254,9 @@ form textarea {
     width: 60px;
     left: 450px;
     
+}
+.social {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
 }
