--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,8 @@ ul {
 /*    top: 0;*/
     margin-top: 20px;
     display: inline-block;
-    width: 48%;
+    width: 45%;
+    padding: 20px;
 /*    padding-left: 20px;*/
 }
 
@@ -276,12 +277,21 @@ form textarea {
 .social {
     margin: 0 50px 0 0;
     display: inline-block;
-    width: 50px;
-    height: 50px;
+   color:#fff;
+    font-size: 50px;
+    border: 2px solid #fff;
+    text-align: center;
+    line-height: 50px;
+    padding: 0 5px;
 }
 
 #social-logos {
-    margin-top: 120px;
+  padding: 30px 0;
+
+}
+.form .social a {
+    text-decoration: none;
+    color: #fff;
 
 }
 
