--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,28 +1,58 @@
 /*parametr screen dotyczy tylko ekranów, może być też np. print*/
-@media screen and (min-width:769px) and (max-width:992px){
-    .box{
-        width: 48%;
+@media all and  (max-width:1200px){
+    #portfolio-box1{
+        width: 50%;
     }
-    #gallery{
+    #portfolio-box2{
+        width: 50%;
+    }
+    #portfolio-box3{
+        width: 100%;
+    }
+    #about-img{
+        width: 100%;
+    }
+    #about-img img{
+        width: 70%;
+    }
+    .about-text
+    {
+        width: 70%;
+    align-items: center;
+    }
+}
+@media all and (max-width:992px){
+     #portfolio-box1{
+        width: 100%;
+    }
+    #portfolio-box2{
+        width: 100%;
+    }
+    #portfolio-box3{
+        width: 100%;
+    }
+    #about-img img{
         width: 90%;
     }
-}
-@media screen and  (min-width:481px) and (max-width:768px){
-    .box{ 
-        width: 98%;
+    .about-test{
+        width: 70%;
     }
-    #gallery{
-        width: 95%;
-    }
-}
-@media screen and (max-width:480px){
-    .box{ 
+    .form {
         width: 100%;
     }
-    #gallery{
+}
+@media all and (max-width:768px){
+    
+    section{
+        padding: 20px;
+    }
+    #about-img img{
         width: 100%;
     }
-    body{
-        margin: 0;
+}
+@media all and (max-width:520px){
+  
+    section{
+        padding: 0; 
     }
 }
