--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,44 +1,59 @@
 /*parametr screen dotyczy tylko ekranów, może być też np. print*/
 @media all and  (max-width:1200px){
-    #portfolio-box1{
-        width: 50%;
-    }
-    #portfolio-box2{
+ 
+    .portfolio-boxes{
         width: 50%;
     }
     #portfolio-box3{
         width: 100%;
     }
-    #about-img{
-        width: 100%;
-    }
-    #about-img img{
-        width: 70%;
-    }
-    .about-text
-    {
-        width: 70%;
-    align-items: center;
-    }
+ 
 }
 @media all and (max-width:992px){
-     #portfolio-box1{
-        width: 100%;
+    #menu-container ul{
+        display: none;
+    background-color: #ffffff;
+
+        
     }
-    #portfolio-box2{
-        width: 100%;
+    #menu-container ul li{
+        display: block;
     }
-    #portfolio-box3{
-        width: 100%;
+    #menu-container #drop:checked + ul{
+        display: block;
+    }
+    #menu-container .toggle{
+        display: block;
+        padding: 0 20px;
+        font-size: 20px;
+        line-height: 60px;
+        text-align: right;
+    }
+        .menu-list{
+            display: block;
+            text-align: right;
+            padding: 20px;
     }
     #about-img img{
-        width: 90%;
+        width: 100%;
     }
-    .about-test{
-        width: 70%;
+    .about-text{
+        width: 100%;
+    }
+       .portfolio-boxes{
+        width: 100%;
     }
     .form {
         width: 100%;
+    }
+    #form-header{
+        text-align: center;
+    }
+   #form #data{
+        text-align: center;
+    }
+    #social-logos{
+        text-align: center;
     }
 }
 @media all and (max-width:768px){
@@ -46,13 +61,17 @@
     section{
         padding: 20px;
     }
-    #about-img img{
-        width: 100%;
-    }
+  
 }
 @media all and (max-width:520px){
   
     section{
         padding: 0; 
+    }
+    #Name{
+        font-size: 3em;
+    }
+    #FED{
+        font-size: 1.5em;
     }
 }
